<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/choose_timezone"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Spinner
                android:id="@+id/timezonesSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                />

            <Button
                android:id="@+id/setTimezoneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/set_timezone_button_text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/clockNavButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clock_nav_string" />

    <Button
        android:id="@+id/timerNavButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_nav_string" />

</LinearLayout>